platform/wasm/src/tests/snapshots/wasm__tests__partition__clean_math_ok_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      38
    ],
    "items": 17,
    "width": 63.76,
    "height": 121.36,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      40,
      70
    ],
    "items": 13,
    "width": 96.56,
    "height": 47.71,
    "x": -48.67,
    "y": 140.56
  }
]
