platform/wasm/src/tests/snapshots/wasm__tests__partition__clean_plain_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      15
    ],
    "items": 8,
    "width": 57.6,
    "height": 44.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      17,
      53
    ],
    "items": 13,
    "width": 84.88,
    "height": 155.62,
    "x": 0.0,
    "y": 63.44
  },
  {
    "range": [
      54,
      75
    ],
    "items": 5,
    "width": 56.24,
    "height": 90.48,
    "x": 0.0,
    "y": 238.26
  }
]
