platform/wasm/src/tests/snapshots/wasm__tests__partition__clean_structure_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      24,
      31
    ],
    "items": 5,
    "width": 55.2,
    "height": 88.48,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      33,
      56
    ],
    "items": 10,
    "width": 46.8,
    "height": 136.72,
    "x": 0.0,
    "y": 107.68
  },
  {
    "range": [
      58,
      63
    ],
    "items": 7,
    "width": 26.24,
    "height": 9.12,
    "x": 18.8,
    "y": 270.96
  },
  {
    "range": [
      64,
      80
    ],
    "items": 15,
    "width": 72.16,
    "height": 37.5,
    "x": 17.6,
    "y": 291.76
  },
  {
    "range": [
      82,
      88
    ],
    "items": 15,
    "width": 35.82,
    "height": 14.32,
    "x": 28.5,
    "y": 355.2
  },
  {
    "range": [
      89,
      95
    ],
    "items": 6,
    "width": 35.82,
    "height": 14.32,
    "x": 28.5,
    "y": 378.32
  },
  {
    "range": [
      97,
      106
    ],
    "items": 11,
    "width": 8.32,
    "height": 113.6,
    "x": 0.0,
    "y": 413.6
  },
  {
    "range": [
      107,
      116
    ],
    "items": 4,
    "width": 15.28,
    "height": 67.36,
    "x": -0.16,
    "y": 546.4
  },
  {
    "range": [
      117,
      126
    ],
    "items": 6,
    "width": 8.59,
    "height": 113.6,
    "x": 0.0,
    "y": 632.96
  },
  {
    "range": [
      174,
      232
    ],
    "items": 18,
    "width": 35.1,
    "height": 119.88,
    "x": 0.0,
    "y": 765.76
  }
]
