platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_align_paren_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      27
    ],
    "items": 10,
    "width": 86.22,
    "height": 17.93,
    "x": -42.45,
    "y": 40.32
  },
  {
    "range": [
      29,
      35
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 77.45
  }
]
