platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_broken_call_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      20
    ],
    "items": 6,
    "width": 82.96,
    "height": 67.36,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      22,
      47
    ],
    "items": 6,
    "width": 54.59,
    "height": 40.0,
    "x": -27.19,
    "y": 86.56
  },
  {
    "range": [
      49,
      68
    ],
    "items": 4,
    "width": 82.96,
    "height": 67.36,
    "x": 0.0,
    "y": 145.76
  }
]
