platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_empty_quotes_diagnostics.snap
---
source: wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 15,
      "end": 16
    },
    "severity": "warning",
    "message": "unclosed math string; inserted a closing `\"`",
    "hints": []
  }
]
