platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_empty_sup_call_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      22
    ],
    "items": 8,
    "width": 31.03,
    "height": 18.0,
    "x": -15.52,
    "y": 62.72
  },
  {
    "range": [
      24,
      30
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 122.32
  }
]
