platform/wasm/src/tests/snapshots/wasm__tests__partition__recovery_math_mixed_errors_chunks.snap
---
source: wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      30
    ],
    "items": 11,
    "width": 126.11,
    "height": 101.82,
    "x": -43.15,
    "y": 0.0
  },
  {
    "range": [
      32,
      57
    ],
    "items": 7,
    "width": 54.59,
    "height": 40.0,
    "x": -27.19,
    "y": 121.02
  },
  {
    "range": [
      59,
      66
    ],
    "items": 6,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 180.22
  }
]
